// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpDownSimpleNumericInput component renders correctly 1`] = `
<div>
  <div
    class="css-53osab"
  >
    <button
      aria-label="Down"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge button-sides css-t93omw-MuiButtonBase-root-MuiIconButton-root"
      data-testid="icon-button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="RemoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="MuiFormControl-root MuiTextField-root css-gt5h9l-MuiFormControl-root-MuiTextField-root"
      data-testid="up-down-simple-numeric-input-text-field"
    >
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-18sqayi-MuiInputBase-root-MuiFilledInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
          data-testid="up-down-simple-numeric-input-text-field-input"
          id=":r0:"
          name="Counter"
          type="text"
          value="0"
        />
      </div>
    </div>
    <button
      aria-label="Up"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge button css-14c360u-MuiButtonBase-root-MuiIconButton-root"
      data-testid="icon-button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`UpDownSimpleNumericInput component renders variant with buttons on the side 1`] = `
<div>
  <div
    class="locked-xs css-53osab"
    data-testid="up-down-simple-numeric-input-buttons-wrapper"
  >
    <div
      class="MuiFormControl-root MuiTextField-root css-gt5h9l-MuiFormControl-root-MuiTextField-root"
      data-testid="up-down-simple-numeric-input-text-field"
    >
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-18sqayi-MuiInputBase-root-MuiFilledInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
          data-testid="up-down-simple-numeric-input-text-field-input"
          id=":r1:"
          name="Counter"
          type="text"
          value="0"
        />
      </div>
    </div>
    <button
      aria-label="Down"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge button-right css-t93omw-MuiButtonBase-root-MuiIconButton-root"
      data-testid="icon-button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="RemoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <button
      aria-label="Up"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge button css-14c360u-MuiButtonBase-root-MuiIconButton-root"
      data-testid="icon-button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`UpDownSimpleNumericInput component renders variant with step set to a pre-defined value 1`] = `
<div>
  <div
    class="css-53osab"
  >
    <button
      aria-label="Down"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge button-sides css-t93omw-MuiButtonBase-root-MuiIconButton-root"
      data-testid="icon-button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="RemoveIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13H5v-2h14v2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <div
      class="MuiFormControl-root MuiTextField-root css-gt5h9l-MuiFormControl-root-MuiTextField-root"
      data-testid="up-down-simple-numeric-input-text-field"
    >
      <div
        class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-18sqayi-MuiInputBase-root-MuiFilledInput-root"
      >
        <input
          aria-invalid="false"
          class="MuiInputBase-input MuiFilledInput-input css-10botns-MuiInputBase-input-MuiFilledInput-input"
          data-testid="up-down-simple-numeric-input-text-field-input"
          id=":r2:"
          name="Counter"
          type="text"
          value="0"
        />
      </div>
    </div>
    <button
      aria-label="Up"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge button css-14c360u-MuiButtonBase-root-MuiIconButton-root"
      data-testid="icon-button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
